--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "scale",
+  "description": "Weight management for your business",
   "version": "0.1.0",
   "private": true,
   "scripts": {
