--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clerk:sync": "tsx src/scripts/clerk-sync.ts"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.6",
     "@clerk/backend": "^2.10.1",
     "@clerk/nextjs": "^6.31.6",
     "@clerk/themes": "^2.4.15",
